--- a/top_up_management.html
+++ b/top_up_management.html
@@ -51,7 +51,7 @@
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
       <!-- Content Header (Page header) -->
-      <!-- /.modal -->      
+      <!-- /.modal -->
       <div class="modal fade" id="cancelModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -87,107 +87,107 @@
                 <span aria-hidden="true">×</span>
               </button>
             </div>
-            <div class="modal-body">              
-            <div class="row">
-              <div class="col-md-5">
-                <label class="title-module">Username:</label>
-              </div>
-              <div class="col-md-7">
-                <input type="text"  id="topup-user" name="name" class="form-control" placeholder="">
-              </div>
-            </div>
-            <hr class="divider">
-            <div class="row">
-              <div class="col-lg-5">
-                <label class="title-module">Total Nominal:</label>
-              </div>
-              <div class="col-lg-7">
-                <div class="form-group">
-                  <div class="radio-group">
-                    <div class="row row-cols-md-3" style="text-align: center;">
-                        <div class="icheck-primary">
-                            <input type="radio" name="option" id="option1" value="10000"/>
-                            <label for="option1" style="font-weight: normal;">Rp. 10000</label>
-                        </div>
-
-                        <div class="icheck-primary">
-                            <input type="radio" name="option" id="option2" value="20000"/>
-                            <label for="option2" style="font-weight: normal;">Rp. 20000</label>
-                        </div>
-
-                        <div class="icheck-primary">
-                            <input type="radio" name="option" id="option3" value="30000"/>
-                            <label for="option3" style="font-weight: normal;">Rp. 30000</label>
-                        </div>
-
-                        <div class="icheck-primary">
-                            <input type="radio" name="option" id="option4" value="40000"/>
-                            <label for="option4" style="font-weight: normal;">Rp. 40000</label>
-                        </div>
-
-                        <div class="icheck-primary">
-                            <input type="radio" name="option" id="option5" value="50000"/>
-                            <label for="option5" style="font-weight: normal;">Rp. 50000</label>
-                        </div>
-
-                        <div class="icheck-primary">
-                            <input type="radio" name="option" id="option6" value="60000"/>
-                            <label for="option6" style="font-weight: normal;">Rp. 60000</label>
-                        </div>
-                    </div>
+            <div class="modal-body">
+              <div class="row">
+                <div class="col-md-5">
+                  <label class="title-module">Username:</label>
                 </div>
-                <div class="input-group" style="margin-top: 1rem;">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text"><input type="radio" value="" name="option" id="option7"></span>
+                <div class="col-md-7">
+                  <input type="text" id="topup-user" name="name" class="form-control" placeholder="">
+                </div>
+              </div>
+              <hr class="divider">
+              <div class="row">
+                <div class="col-lg-5">
+                  <label class="title-module">Total Nominal:</label>
+                </div>
+                <div class="col-lg-7">
+                  <div class="form-group">
+                    <div class="radio-group">
+                      <div class="row row-cols-md-3" style="text-align: center;">
+                        <div class="icheck-primary">
+                          <input type="radio" name="option" id="option1" value="10000" />
+                          <label for="option1" style="font-weight: normal;">Rp. 10000</label>
+                        </div>
+
+                        <div class="icheck-primary">
+                          <input type="radio" name="option" id="option2" value="20000" />
+                          <label for="option2" style="font-weight: normal;">Rp. 20000</label>
+                        </div>
+
+                        <div class="icheck-primary">
+                          <input type="radio" name="option" id="option3" value="30000" />
+                          <label for="option3" style="font-weight: normal;">Rp. 30000</label>
+                        </div>
+
+                        <div class="icheck-primary">
+                          <input type="radio" name="option" id="option4" value="40000" />
+                          <label for="option4" style="font-weight: normal;">Rp. 40000</label>
+                        </div>
+
+                        <div class="icheck-primary">
+                          <input type="radio" name="option" id="option5" value="50000" />
+                          <label for="option5" style="font-weight: normal;">Rp. 50000</label>
+                        </div>
+
+                        <div class="icheck-primary">
+                          <input type="radio" name="option" id="option6" value="60000" />
+                          <label for="option6" style="font-weight: normal;">Rp. 60000</label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="input-group" style="margin-top: 1rem;">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text"><input type="radio" value="" name="option" id="option7"></span>
+                      </div>
+                      <input type="text" class="form-control any" id="any">
+                    </div>
                   </div>
-                  <input type="text" class="form-control any" id="any">
-              </div>
                 </div>
               </div>
-            </div>
-            <hr class="divider">
-            <div class="row">
-              <div class="col-lg-5">
-                <label class="title-module">Payment Method:</label>
-              </div>
-              <div class="col-lg-7">
-                <div class="form-group">
-                  <div class="radio-group">
-                    <div class="row row-cols-md-3" style="text-align: center;">
+              <hr class="divider">
+              <div class="row">
+                <div class="col-lg-5">
+                  <label class="title-module">Payment Method:</label>
+                </div>
+                <div class="col-lg-7">
+                  <div class="form-group">
+                    <div class="radio-group">
+                      <div class="row row-cols-md-3" style="text-align: center;">
                         <div class="icheck-primary">
-                            <input type="radio" name="option2" id="option-method1" value="Credit Card"/>
-                            <label for="option1" style="font-weight: normal;">Credit Card</label>
+                          <input type="radio" name="option2" id="option-method1" value="Credit Card" />
+                          <label for="option1" style="font-weight: normal;">Credit Card</label>
                         </div>
 
                         <div class="icheck-primary">
-                            <input type="radio" name="option2" id="option-method2" value="Paypall"/>
-                            <label for="option2" style="font-weight: normal;">Paypall</label>
+                          <input type="radio" name="option2" id="option-method2" value="Paypall" />
+                          <label for="option2" style="font-weight: normal;">Paypall</label>
                         </div>
 
                         <div class="icheck-primary">
-                            <input type="radio" name="option2" id="option-method3" value="OVO"/>
-                            <label for="option3" style="font-weight: normal;">OVO</label>
+                          <input type="radio" name="option2" id="option-method3" value="OVO" />
+                          <label for="option3" style="font-weight: normal;">OVO</label>
                         </div>
 
                         <div class="icheck-primary">
-                            <input type="radio" name="option2" id="option-method4" value="Gopay"/>
-                            <label for="option4" style="font-weight: normal;">Gopay</label>
+                          <input type="radio" name="option2" id="option-method4" value="Gopay" />
+                          <label for="option4" style="font-weight: normal;">Gopay</label>
                         </div>
 
                         <div class="icheck-primary">
-                            <input type="radio" name="option2" id="option-method5" value="Dana"/>
-                            <label for="option5" style="font-weight: normal;">Dana</label>
+                          <input type="radio" name="option2" id="option-method5" value="Dana" />
+                          <label for="option5" style="font-weight: normal;">Dana</label>
                         </div>
 
                         <div class="icheck-primary">
-                            <input type="radio" name="option2" id="option-method6" value="Cash"/>
-                            <label for="option6" style="font-weight: normal;">Cash</label>
+                          <input type="radio" name="option2" id="option-method6" value="Cash" />
+                          <label for="option6" style="font-weight: normal;">Cash</label>
                         </div>
+                      </div>
                     </div>
-                </div>
+                  </div>
                 </div>
               </div>
-            </div>
             </div>
             <div class="modal-footer">
               <button class="btn btn-secondary" type="button" data-dismiss="modal">
@@ -199,96 +199,97 @@
         </div>
       </div>
       <div class="modal fade" id="checkModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
-      aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">
-              Check Data Top Up
-            </h5>
-            <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">×</span>
-            </button>
-          </div>
-          <div class="modal-body">              
-          <div class="row">
-            <div class="col-md-5">
-              <label class="title-module">Username:</label>
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">
+                Check Data Top Up
+              </h5>
+              <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">×</span>
+              </button>
             </div>
-            <div class="col-md-7">
-              <input type="text" id="checkuser"  name="name" class="form-control" readonly placeholder="">
+            <div class="modal-body">
+              <div class="row">
+                <div class="col-md-5">
+                  <label class="title-module">Username:</label>
+                </div>
+                <div class="col-md-7">
+                  <input type="text" id="checkuser" name="name" class="form-control" readonly placeholder="">
+                </div>
+              </div>
+              <hr class="divider">
+              <div class="row">
+                <div class="col-md-5">
+                  <label class="title-module">Total Nominal:</label>
+                </div>
+                <div class="col-md-7">
+                  <input type="text" id="checknominal" name="name" class="form-control" readonly placeholder="">
+                </div>
+              </div>
+              <hr class="divider">
+              <div class="row">
+                <div class="col-md-5">
+                  <label class="title-module">Payment Method:</label>
+                </div>
+                <div class="col-md-7">
+                  <input type="text" id="checkmethod" name="name" class="form-control" readonly placeholder="">
+                </div>
+              </div>
             </div>
-          </div>
-          <hr class="divider">
-          <div class="row">
-            <div class="col-md-5">
-              <label class="title-module">Total Nominal:</label>
+            <div class="modal-footer">
+              <button class="btn btn-secondary" type="button" data-dismiss="modal" data-target="#topupModal"
+                data-toggle="modal">
+                Back
+              </button>
+              <a class="btn btn-primary" id="btn-delete" href="#" data-dismiss="modal" data-toggle="modal"
+                data-target="#passwordModal">Next</a>
             </div>
-            <div class="col-md-7">
-              <input type="text"  id="checknominal" name="name" class="form-control" readonly placeholder="">
-            </div>
-          </div>
-          <hr class="divider">
-          <div class="row">
-            <div class="col-md-5">
-              <label class="title-module">Payment Method:</label>
-            </div>
-            <div class="col-md-7">
-              <input type="text" id="checkmethod"  name="name" class="form-control" readonly placeholder="">
-            </div>
-          </div>
-          </div>
-          <div class="modal-footer">
-            <button class="btn btn-secondary" type="button" data-dismiss="modal" data-target="#topupModal" data-toggle="modal">
-              Back
-            </button>
-            <a class="btn btn-primary" id="btn-delete" href="#" data-dismiss="modal" data-toggle="modal"
-              data-target="#passwordModal">Next</a>
           </div>
         </div>
       </div>
-    </div>
       <div class="modal fade" id="passwordModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
-      aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">
-              Password
-            </h5>
-            <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">×</span>
-            </button>
-          </div>
-          <div class="modal-body">              
-          <div class="row">
-            <div class="col-md-5">
-              <label class="title-module">Password:</label>
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">
+                Password
+              </h5>
+              <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">×</span>
+              </button>
             </div>
-            <div class="col-md-7">
-              <input type="password" id="passwordconfirm" name="name" class="form-control" placeholder="">
+            <div class="modal-body">
+              <div class="row">
+                <div class="col-md-5">
+                  <label class="title-module">Password:</label>
+                </div>
+                <div class="col-md-7">
+                  <input type="password" id="passwordconfirm" name="name" class="form-control" placeholder="">
+                </div>
+              </div>
+              <hr class="divider">
+              <div class="row">
+                <div class="col-md-5">
+                  <label class="title-module">Confirm Password:</label>
+                </div>
+                <div class="col-md-7">
+                  <input type="password" id="passwordconfirm2" name="name" class="form-control" placeholder="">
+                </div>
+              </div>
             </div>
-          </div>
-          <hr class="divider">
-          <div class="row">
-            <div class="col-md-5">
-              <label class="title-module">Confirm Password:</label>
+            <div class="modal-footer">
+              <button class="btn btn-secondary" type="button" data-dismiss="modal" data-toggle="modal"
+                data-target="#checkModal">
+                Back
+              </button>
+              <a class="btn btn-success" id="btn-delete" href="#" data-toggle="modal" onclick="topupstatus()">Confirm</a>
             </div>
-            <div class="col-md-7">
-              <input type="password" id="passwordconfirm2" name="name" class="form-control" placeholder="">
-            </div>
-          </div>
-          </div>
-          <div class="modal-footer">
-            <button class="btn btn-secondary" type="button" data-dismiss="modal" data-toggle="modal" data-target="#checkModal">
-              Back
-            </button>
-            <a class="btn btn-primary" id="btn-delete" href="#" data-toggle="modal"
-              onclick="topupstatus()">Next</a>
           </div>
         </div>
       </div>
-    </div>
 
       <!-- Main content -->
       <section class="content-header">
@@ -310,17 +311,12 @@
       <section class="content">
         <div class="card">
           <!-- / Content Table -->
+          <div class="card-header">
+            <button type="button" class="btn bg-gradient-primary" style="float: right" onclick="showModal2('topup')">
+              <i class="nav-icon fas fa-plus"></i> &nbsp Top Up
+            </button>
+          </div>
           <div class="card-body">
-            <div class="card-header">
-              <button
-                type="button"
-                class="btn bg-gradient-primary"
-                style="float: right"
-                onclick="showModal2('topup')"
-              >
-                <i class="nav-icon fas fa-plus"></i> &nbsp Top Up
-              </button>
-            </div>
             <table id="example1" class="table table-bordered table-striped">
               <thead>
                 <tr>
@@ -534,8 +530,8 @@
   <script src="./assets/vendors/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
   <script src="./assets/vendors/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
   <script src="./assets/vendors/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
-  <script src="assets/js/bookmanagement.js" type="text/javascript"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>        
+  <script src="assets/js/dtpage.js" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </body>
 
 </html>
