--- a/top_up.html
+++ b/top_up.html
@@ -244,8 +244,9 @@
                 </div>
             </section>
             <!-- /.content -->
-        </div>
 
+        </div>
+        <div w3-include-html="include_footer.html"></div>
 
         <!-- jQuery -->
         <script src="./assets/vendors/plugins/jquery/jquery.min.js"></script>
