--- a/top_up_management.html
+++ b/top_up_management.html
@@ -285,7 +285,8 @@
                 data-target="#checkModal">
                 Back
               </button>
-              <a class="btn btn-success" id="btn-delete" href="#" data-toggle="modal" onclick="topupstatus()">Confirm</a>
+              <a class="btn btn-success" id="btn-delete" href="#" data-toggle="modal"
+                onclick="topupstatus()">Confirm</a>
             </div>
           </div>
         </div>
@@ -498,8 +499,8 @@
       <!-- /.content -->
     </div>
     <!-- /.content-wrapper -->
-    <div w3-include-html="include_footer.html"></div>
   </div>
+  <div w3-include-html="include_footer.html"></div>
   <!-- ./wrapper -->
   <!-- jQuery -->
   <script type="text/javascript" src="./assets/vendors/plugins/jquery/jquery.min.js"></script>
