--- a/category_management.html
+++ b/category_management.html
@@ -195,7 +195,7 @@
             </section>
 
             <!-- Main content -->
-            <section class="content">
+            <section class="content pdg-btm">
                 <div class="container-fluid">
                     <div class="card">
                         <div class="card-header">
