--- a/slideshow_management.html
+++ b/slideshow_management.html
@@ -188,7 +188,7 @@
       </section>
 
       <!-- Main content -->
-      <section class="content">
+      <section class="content pdg-btm">
         <div class="container-fluid">
           <div class="card">
             <div class="card-header">
