--- a/category_management.html
+++ b/category_management.html
@@ -201,7 +201,7 @@
                         <div class="card-header">
                             <div class="row">
                                 <div class="col-md-12 ctm-responsive">
-                                    <button type="button" class="btn btn-warning add-btn" data-toggle="modal"
+                                    <button type="button" class="btn btn-primary add-btn" data-toggle="modal"
                                         data-target="#modal-add" style="float:right">
                                         <i class="nav-icon fas fa-plus"></i>
                                         &nbsp Add Category
