--- a/include_sidebar.html
+++ b/include_sidebar.html
@@ -99,7 +99,7 @@
                   <li class="nav-item">
                     <a href="./category_management.html" class="nav-link">
                       <i class="fas fa-th nav-icon"></i>
-                      <p>Category Mangement</p>
+                      <p>Category Management</p>
                     </a>
                   </li>
                   <li class="nav-item">
