--- a/slideshow_management.html
+++ b/slideshow_management.html
@@ -197,7 +197,7 @@
 
                 </div>
                 <div class="col-md-6 ctm-responsive">
-                  <button type="button" class="btn btn-warning add-btn" data-toggle="modal" data-target="#modal-add"
+                  <button type="button" class="btn btn-primary add-btn" data-toggle="modal" data-target="#modal-add"
                     style="float:right">
                     <i class="nav-icon fas fa-plus"></i>
                     &nbsp Add Slideshow Photo
