--- a/donation.html
+++ b/donation.html
@@ -82,11 +82,10 @@
               <img src="./assets/media/books/donate1.jpg" class="card-img-top" alt="donate1">
               <div class="card-body">
                 <h5 class="list-reason">DONATING GOOD BOOKS GIVES THEM EXTRA PURPOSE</h5>
-                <p class="card-text">When you donate your books, you allow the opportunity to let those texts have new
-                  life.
-                  Whether they end up in the hands of a young teen looking for an exciting new story to read, or they
-                  become part of a collection on someone else’s shelf,
-                  donating your books expands their purpose and influence in a fascinating way.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                  Voluptate exercitationem reiciendis ipsa? Nihil laborum recusandae, 
+                  vero voluptate incidunt quas? Dolor ab enim exercitationem sit quam reiciendis officiis sed sapiente aspernatur.
+              </p>
               </div>
             </div>
           </div>
@@ -96,10 +95,9 @@
               <img src="./assets/media/books/donate2.jpg" class="card-img-top" alt="donate2">
               <div class="card-body">
                 <h5 class="list-reason">YOU CAN SUPPORT YOUR LOCAL LIBRARY SYSTEM</h5>
-                <p class="card-text">If you donate good books, you are supporting all of our public libraries. We
-                  collect these books
-                  which helps raise money in support of early childhood literacy, technology, education and other
-                  programs held at various libraries in our system.
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                  Voluptate exercitationem reiciendis ipsa? Nihil laborum recusandae,
+                   vero voluptate incidunt quas? Dolor ab enim exercitationem sit quam reiciendis officiis sed sapiente aspernatur.
                 </p>
               </div>
             </div>
@@ -110,10 +108,9 @@
               <img src="./assets/media/books/donate3.jpg" class="card-img-top" alt="donate3">
               <div class="card-body">
                 <h5 class="list-reason">IT’S TIME FOR CLEANING</h5>
-                <p class="card-text">Have a few (or a bunch) of great books sitting on a shelf?
-                  Clear out the space by bringing in books by the box-load at our donation center.
-                  Or if you’re downsizing into a new home, consider going through your book cases to see which ones you
-                  think others will love reading as much as you did.
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                  Voluptate exercitationem reiciendis ipsa? Nihil laborum recusandae, 
+                  vero voluptate incidunt quas? Dolor ab enim exercitationem sit quam reiciendis officiis sed sapiente aspernatur.
                 </p>
               </div>
             </div>
