--- a/donate_management.html
+++ b/donate_management.html
@@ -61,7 +61,7 @@
                                 </div>
                                 <!-- /.card-header -->
                                 <div class="card-body">
-                                    <table id="datatable1" class="table table-bordered table-striped">
+                                    <table id="example1" class="table table-bordered table-striped">
                                         <thead>
                                             <tr class="text-center" >
                                                 <th>No</th>
@@ -186,22 +186,112 @@
 
     </div>
 
-    <script src="./assets/js/js.js" type="text/javascript"></script>
-    <!-- jQuery -->
-    <script src="./assets/vendors/plugins/jquery/jquery.min.js"></script>
+        <!-- jQuery -->
+    <script type="text/javascript" src="./assets/vendors/plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
-    <script src="./assets/vendors/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- DataTables -->
-    <script src="./assets/vendors/plugins/datatables/jquery.dataTables.min.js"></script>
-    <script src="./assets/vendors/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
-    <script src="./assets/vendors/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
-    <script src="./assets/vendors/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+    <script type="text/javascript" src="./assets/vendors/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- overlayScrollbars -->
+    <!-- <script type="text/javascript" src="./plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script> -->
     <!-- AdminLTE App -->
-    <script src="./assets/vendors/dist/js/adminlte.min.js"></script>
+    <script type="text/javascript" src="./assets/vendors/dist/js/adminlte.min.js"></script>
     <!-- AdminLTE for demo purposes -->
-    <script src="./assets/vendors/dist/js/demo.js"></script>
+    <script type="text/javascript" src="./assets/vendors/dist/js/demo.js"></script>
+    <!-- extra JS to include HTML -->
+    <script src="./assets/js/js.js" type="text/javascript"></script>
+    <!-- Flickity -->
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+    <script type="text/javascript" src="./assets/js/search.js" ></script>
+    <!-- Ckeditor -->
+    <script src="//cdn.ckeditor.com/4.15.1/standard/ckeditor.js"></script>
+    <!-- InputMask -->
+    <script src="./assets/vendors/plugins/moment/moment.min.js"></script>
+    <script src="./assets/vendors/plugins/inputmask/min/jquery.inputmask.bundle.min.js"></script>
+    <!-- date-range-picker -->
+    <script src="./assets/vendors/plugins/daterangepicker/daterangepicker.js"></script>
+    <!-- Tempusdominus Bootstrap 4 -->
+    <script src="./assets/vendors/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+    <!-- Modul AddBook -->
+    <script type="text/javascript" src="./assets/js/modal.js"></script>
+    <!-- DataTables -->
+   <script src="./assets/vendors/plugins/datatables/jquery.dataTables.min.js"></script>
+   <script src="./assets/vendors/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+   <script src="./assets/vendors/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+   <script src="./assets/vendors/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+   <script src="./assets/js/dtpage.js"></script>
 
-    <script src="./assets/js/datatable.js" type="text/javascript"></script>
+</body>
+
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
 
 </body>
 
