menambahkan tag section dan style pada pembungkus edit form

--- a/Profile.html
+++ b/Profile.html
@@ -109,6 +109,7 @@
     </section>
 
     <!-- Edit Form UserProfile -->
+      <section class="padding-editform">
         <div id="container-editform">
           <h3 style="text-align:center;">Edit Your Profile</h3>
             <div class="form-item">
@@ -182,6 +183,7 @@
               <button type="button" class="btn btn-secondary">Close</button>
             </div>
         </div>
+      </section>
     </div>
     <div w3-include-html="include_footer.html"></div>
     </div>
