create Function to set autoHeight Card

--- a/donation.html
+++ b/donation.html
@@ -82,10 +82,11 @@
               <img src="./assets/media/books/donate1.jpg" class="card-img-top" alt="donate1">
               <div class="card-body">
                 <h5 class="list-reason">DONATING GOOD BOOKS GIVES THEM EXTRA PURPOSE</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                  Voluptate exercitationem reiciendis ipsa? Nihil laborum recusandae, 
-                  vero voluptate incidunt quas? Dolor ab enim exercitationem sit quam reiciendis officiis sed sapiente aspernatur.
-              </p>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Voluptate exercitationem reiciendis ipsa? Nihil laborum recusandae,
+                  vero voluptate incidunt quas? Dolor ab enim exercitationem sit quam reiciendis officiis sed sapiente
+                  aspernatur.
+                </p>
               </div>
             </div>
           </div>
@@ -95,9 +96,10 @@
               <img src="./assets/media/books/donate2.jpg" class="card-img-top" alt="donate2">
               <div class="card-body">
                 <h5 class="list-reason">YOU CAN SUPPORT YOUR LOCAL LIBRARY SYSTEM</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   Voluptate exercitationem reiciendis ipsa? Nihil laborum recusandae,
-                   vero voluptate incidunt quas? Dolor ab enim exercitationem sit quam reiciendis officiis sed sapiente aspernatur.
+                  vero voluptate incidunt quas? Dolor ab enim exercitationem sit quam reiciendis officiis sed sapiente
+                  aspernatur.
                 </p>
               </div>
             </div>
@@ -108,9 +110,10 @@
               <img src="./assets/media/books/donate3.jpg" class="card-img-top" alt="donate3">
               <div class="card-body">
                 <h5 class="list-reason">IT’S TIME FOR CLEANING</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                  Voluptate exercitationem reiciendis ipsa? Nihil laborum recusandae, 
-                  vero voluptate incidunt quas? Dolor ab enim exercitationem sit quam reiciendis officiis sed sapiente aspernatur.
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Voluptate exercitationem reiciendis ipsa? Nihil laborum recusandae,
+                  vero voluptate incidunt quas? Dolor ab enim exercitationem sit quam reiciendis officiis sed sapiente
+                  aspernatur.
                 </p>
               </div>
             </div>
@@ -191,6 +194,7 @@
   <!-- Tempusdominus Bootstrap 4 -->
   <script src="./assets/vendors/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
   <script type="text/javascript" src="./assets/js/modal.js"></script>
+  <script type="text/javascript" src="./assets/js/donation.js"></script>
 </body>
 
 </html>
