add loadmore search page

--- a/searchpage.html
+++ b/searchpage.html
@@ -320,7 +320,55 @@
                                 <span class="badge badge-success category-book">romance</span>
                                 <span class="badge badge-success category-book">comedy</span>
                             </div>
-                            <button type="button" class="btn btn-block bg-gradient-secondary btn-lg">Load More</button>
+
+                            <div class="book-content">
+                                <div class="content-cover">
+                                    <img src="https://img.wattpad.com/cover/82925272-80-k652602.jpg"
+                                        alt="I Love You, Baby! by July605">
+                                </div>
+                                <p class="title">Trouble Class, Trouble Love</p>
+                                <p class="description">
+                                    Menjadi seorang Arkeolog muda yang terus melakukan penelitian. Hingga pada suatu
+                                    hari, semua rekanku mati akibat sekelompok orang bermata merah dan bertaring yang
+                                    menyerang perkemahan kami.
+                                </p>
+                                <span class="badge badge-success category-book">fantasy</span>
+                                <span class="badge badge-success category-book">romance</span>
+                                <span class="badge badge-success category-book">comedy</span>
+                            </div>
+
+                            <div class="book-content">
+                                <div class="content-cover">
+                                    <img src="https://img.wattpad.com/cover/31631447-80-k177095.jpg"
+                                        alt="I Love You, Baby! by July605">
+                                </div>
+                                <p class="title">Magic in Life</p>
+                                <p class="description">
+                                    Seseorang berusaha menguasai dunia. Dewa dewi kembar pun turun tangan dan menunjuk
+                                    beberapa manusia untuk mengalahkan orang yang ingin menguasai dunia itu dengan
+                                    meminjamkan kekuatan mereka untuk manusia-manusia tersebut.
+                                </p>
+                                <span class="badge badge-success category-book">fantasy</span>
+                                <span class="badge badge-success category-book">romance</span>
+                                <span class="badge badge-success category-book">comedy</span>
+                            </div>
+
+                            <div class="book-content">
+                                <div class="content-cover">
+                                    <img src="https://img.wattpad.com/cover/58398777-80-k720141.jpg"
+                                        alt="I Love You, Baby! by July605">
+                                </div>
+                                <p class="title">The Lost Princess</p>
+                                <p class="description">
+                                    Lea hanyalah gadis cantik bermata biru dan berambut merah yang tinggal bersama ibu
+                                    angkatnya. Lalu, seseorang bernama Theresa mengubah dirinya, membantu Lea untuk
+                                    mencari jati
+                                    dirinya.
+                                </p>
+                                <span class="badge badge-success category-book">fantasy</span>
+                                <span class="badge badge-success category-book">romance</span>
+                                <span class="badge badge-success category-book">comedy</span>
+                            </div>
                         </div>
 
                     </div>
@@ -360,6 +408,8 @@
     <script src="./assets/vendors/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
     <!-- Modul AddBook -->
     <script type="text/javascript" src="./assets/js/modal.js"></script>
+    <script src="./assets/js/loadmore.js"></script>
+    <script src="./assets/js/searchpage.js"></script>
 </body>
 
 </html>
