add book list bottom

--- a/indexuser.html
+++ b/indexuser.html
@@ -72,7 +72,7 @@
         </li>
       </ul>
       <!-- SEARCH FORM -->
-      <form id="search-books" class="form-inline flex-grow-1">
+      <form id="search-books" class="form-inline flex-grow-1" action="./searchpage.html">
         <div id="searchbar" class="form-group has-search">
           <span class="fa fa-search form-control-feedback"></span>
           <input id="input-search" type="text" class="form-control" placeholder="Search Book" />
@@ -371,6 +371,79 @@
           </div>
           <div class="books-nf" style="display: none">
             <h3 class="book-not-found">Oops, Book Not Found</h3>
+          </div>
+        </div>
+
+        <div class="list-book-content">
+          <div class="col-12">
+            <div class="custom-flex2">
+              <h2 class="title-container">Book List</h2>
+              <h4 class="title-container">Find your best reads</h4>
+            </div>
+
+            <div class="carousel carousel-main book-list-bottom"
+              data-flickity='{ "wrapAround": true,"pageDots": false, "autoPlay": 2000 }'>
+              <div class="carousel-cell">
+                <a href="detail.html">
+                  <img src="https://img.wattpad.com/cover/217637593-176-k15446.jpg"
+                    class="list-book-bottom carousel-cell-image" alt="white sample" />
+                </a>
+              </div>
+              <div class="carousel-cel">
+                <a href="detail.html">
+                  <img src="https://img.wattpad.com/cover/246598854-176-k420616.jpg"
+                    class="list-book-bottom carousel-cell-image" alt="white sample" />
+                </a>
+              </div>
+              <div class="carousel-cell">
+                <a href="detail.html">
+                  <img src="https://img.wattpad.com/cover/240583823-176-k468965.jpg"
+                    class="carousel-cell-image list-book-bottom" alt="white sample" />
+                </a>
+              </div>
+              <div class="carousel-cell">
+                <a href="detail.html">
+                  <img src="https://img.wattpad.com/cover/164853306-200-k69310.jpg"
+                    class="carousel-cell-image list-book-bottom" alt="white sample" />
+                </a>
+              </div>
+
+              <div class="carousel-cell">
+                <a href="detail.html">
+                  <img src="https://img.wattpad.com/cover/247987794-176-k469618.jpg"
+                    class="carousel-cell-image list-book-bottom" alt="white sample" />
+                </a>
+              </div>
+
+              <div class="carousel-cell">
+                <a href="detail.html">
+                  <img src="https://img.wattpad.com/cover/143926052-200-k378110.jpg"
+                    class="carousel-cell-image list-book-bottom" alt="white sample" />
+                </a>
+              </div>
+
+              <div class="carousel-cell">
+                <a href="detail.html">
+                  <img src="https://img.wattpad.com/cover/244632227-176-k857341.jpg"
+                    class="carousel-cell-image list-book-bottom" alt="white sample" />
+                </a>
+              </div>
+
+              <div class="carousel-cell">
+                <a href="detail.html">
+                  <img src="https://img.wattpad.com/cover/216207581-176-k651777.jpg"
+                    class="carousel-cell-image list-book-bottom" alt="white sample" />
+                </a>
+              </div>
+
+              <div class="carousel-cell">
+                <a href="detail.html">
+                  <img src="https://img.wattpad.com/cover/224935763-352-k438274.jpg"
+                    class="carousel-cell-image list-book-bottom" alt="white sample" />
+                </a>
+              </div>
+            </div>
+
           </div>
         </div>
       </section>
