--- a/detail_invoice.html
+++ b/detail_invoice.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Rent Management</title>
 
+  <!-- Tell the browser to be responsive to screen width -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="./assets/vendors/plugins/fontawesome-free/css/all.min.css">
   <!-- Ionicons -->
