link detail di index.html

--- a/index.html
+++ b/index.html
@@ -305,12 +305,12 @@
 
             <div class="hero-book">
               <div class="hero-book-cover">
-                <a href="/story/235119477"><img src="https://img.wattpad.com/cover/235119477-416-k713259.jpg"
+                <a href="detail.html"><img src="https://img.wattpad.com/cover/235119477-416-k713259.jpg"
                     alt="Conquer Dream, With Bos! cover" /></a>
               </div>
 
               <div>
-                <a class="title" href="/story/235119477" aria-label="Read Conquer Dream, With Bos!">Conquer Dream, With
+                <a class="title" href="detail.html" aria-label="Read Conquer Dream, With Bos!">Conquer Dream, With
                   Bos!</a>
                 <br />
                 <p class="description">
